# RayTracer

./: CMakeLists.txt  README.md
resources/: SVOsimple.pov  box2.pov  box_nr.pov  box_refract.pov  complex.pov  simp_tri.pov
results/: timing_statistics.txt
scripts/: denseCloudTxtToPOV.py  regularObjToPov.py
src/: AABB.cpp  AABB.h  BVH_Node.cpp  BVH_Node.h  Box.cpp  Box.h  Camera.cpp  Camera.h  Data.cpp  Data.h  Intersection.cpp  Intersection.h  LightSource.cpp  LightSource.h  MortonCode.cpp  MortonCode.h  OBJFile.cpp  OBJFile.h  Parse.cpp  Parse.h  PhongMaterial.cpp  PhongMaterial.h  Pigment.cpp  Pigment.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Raytrace.cpp  Raytrace.h  SVO.cpp  SVO.h  SVONode.cpp  SVONode.h  ShadingData.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  (+6 more)
